@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-02-23T01:35:09Z",
+  "timestamp" : "2025-02-23T12:33:02Z",
   "count_outdated" : 4643,
   "uniques_outdated" : 2385,
-  "count" : 4660,
-  "uniques" : 2400,
+  "count" : 4661,
+  "uniques" : 2401,
   "clones" : [
     {
       "timestamp": "2025-02-10T00:00:00Z",
@@ -103,6 +103,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-02-23T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
